// Copyright 2024-2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.internal.v1;

import "accrescent/directory/internal/v1/app_listing.proto";
import "accrescent/directory/internal/v1/package_metadata.proto";
import "accrescent/directory/v1beta1/release_channel.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.internal.v1";

message App {
  // The default listing language of this app as a BCP-47 tag. Required.
  optional string default_listing_language = 1;

  // The app's listings to be displayed in client UI. Must contain a listing for
  // the default listing language and must not contain any duplicate languages.
  repeated AppListing listings = 2;

  // Map of a release channel to corresponding package metadata
  message PackageMetadataEntry {
    accrescent.directory.v1beta1.ReleaseChannel release_channel = 1;
    PackageMetadata package_metadata = 2;
  }

  // The package metadata of the app's latest versions for each release channel.
  // Must contain metadata for the stable channel and must not contain any
  // duplicate release channels.
  repeated PackageMetadataEntry package_metadata = 3;
}
